--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <!--</intent-filter>-->
         <!--</activity>-->
 
-        <activity android:name="com.lfy.customviewdemo.RegionClickActivity">
+        <activity android:name="com.lfy.customviewdemo.RadarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
